# autoresearch

./: .gitignore  .pre-commit-config.yaml  README.md  agent.py  analysis.ipynb  best.json  experiments.tsv  infer.py  prepare.py  program.md  progress.py  pyproject.toml
