[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous inference research swarm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "anyio>=4.13.0",
    "bitsandbytes>=0.49.0",
    "claude-agent-sdk>=0.1.50",
    "datasets>=4.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",
    "rich>=14.0.0",
    "torch==2.9.1",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "nbqa>=1.9.1",
    "pre-commit>=4.5.0",
    "ruff>=0.15.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
install_types = true
pretty = true
non_interactive = true
allow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
allow_subclassing_any = false
allow_untyped_calls = false
allow_incomplete_defs = false
allow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
implicit_reexport = false
strict_equality = true
extra_checks = true

[tool.ruff]
include = ["*.py", "pyproject.toml", "*.ipynb"]
exclude = []
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle
    "N",   # pep8-naming
    "ERA", # eradicate
    "PL",  # pylint
]
fixable = ["A", "B", "COM", "C4", "RET", "SIM", "ICN", "Q", "RSE", "D", "E", "F", "I", "W", "N", "ERA", "PL"]
ignore = [
    "B905",   # `zip()` without an explicit `strict=` parameter
    "E501",   # line too long
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary should start at the second line
    "PLR2004", # Replace magic number with named constant
    "PLR0913", # Too many arguments
    "COM812", # Missing trailing comma
    "ERA001", # Found commented-out code (too many false positives with math comments)
    "A001",   # Variable `input` shadowing a Python builtin (common for torch)
    "A002",   # Argument `input` shadowing a Python builtin (common for torch)
    "D301",   # r-strings for docstrings with backslashes
]

[tool.ruff.lint.per-file-ignores]
# Notebooks don't have module-level docstrings
"*.ipynb" = ["D100"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*", "setUp"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
